[ADD] Implementación de entidades académicas y modulos y crud de Curriculum